--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "fancybox.doc.tar.xz": 25f08df011f38e51703f50bd67b4b8f86324636b
-  "fancybox.tar.xz": 7484c0cd19760dd4a1ce1ac40af95836e3f4bf80
+  fancybox.doc.r18304.tar.xz: 92421bddc024af43a323449aea03e81f911db955
+  fancybox.r18304.tar.xz: 7e0db3214f1094c9f91fb8b3da0bd41441cbe03c
